@startuml Diagramme de Classe - Schéma de Base de Données CyberGuard

title Diagramme de Classe Complet - Relations entre toutes les Classes

' Classe de base User avec spécialisations
class User {
    + id: integer
    + uuid: string
    + nom: string
    + email: string
    + password: hashed
    + is_active: boolean
    + email_verified_at: datetime
    + face_descriptor: string
    + last_ip: string
    + last_login: datetime
    + login_attempts: integer
    --
    + securitySessions(): HasMany
    + roles(): HasMany
    + hasRole(role: string): boolean
    + hasPermission(permission: string): boolean
}

' Spécialisations de User
class AdminUser extends User {
    -- Rôle administrateur --
    + manageUsers(): void
    + viewAuditLogs(): void
    + configureRules(): void
}

class IntranetUser extends User {
    -- Utilisateur du mini-site intranet --
    + accessCourses(): void
    + sendMessages(): void
    + viewGrades(): void
}

class AttackerUser extends User {
    -- Utilisateur attaquant (conceptuel) --
    + launchAttacks(): void
    + bypassSecurity(): void
}

class SecuritySession {
    + id: string (UUID)
    + user_id: integer
    + access_token_hash: string
    + refresh_token_hash: string
    + ip_address: string
    + user_agent: string
    + device_fingerprint: string
    + expires_at: datetime
    + last_activity_at: datetime
    + is_revoked: boolean
    --
    + user(): BelongsTo
    + isActive(): boolean
    + revoke(): void
}

class UserRole {
    + user_id: integer
    + role: string
    --
    + user(): BelongsTo
    + permissions(): BelongsToMany
}

class Permission {
    + id: integer
    + nom: string
    + description: string
    + ressourceType: string
    --
    + rolePermissions(): HasMany
}

class RolePermission {
    + role: string
    + permission_id: integer
    --
    + permission(): BelongsTo
}

class Attack {
    + id: integer
    + type: string
    + rule_id: string
    + incident_id: string
    + source_ip: string
    + target_ip: string
    + target_port: integer
    + protocol: string
    + severity: string
    + status: string
    + country: string
    + city: string
    + latitude: float
    + longitude: float
    + isp: string
    + packet_count: integer
    + bandwidth_mbps: float
    + payload: text
    + description: text
    + is_simulation: boolean
    + alarm_triggered: boolean
    --
    + alerts(): HasMany
    + rule(): BelongsTo
    + comments(): HasMany
    + correlatedAttacks(): Collection
}

class Alert {
    + id: integer
    + attack_id: integer
    + title: string
    + message: text
    + severity: string
    + type: string
    + acknowledged: boolean
    + sound_played: boolean
    --
    + attack(): BelongsTo
}

class DetectionRule {
    + id: integer
    + rule_id: string
    + name: string
    + description: text
    + attack_type: string
    + default_severity: string
    + detection_params: array
    + enabled: boolean
    + priority: integer
    + category: string
    + cve_references: array
    --
    + attacks(): HasMany
}

class AttackComment {
    + id: integer
    + attack_id: integer
    + user_id: integer
    + status: string
    + comment: text
    --
    + attack(): BelongsTo
    + user(): BelongsTo
}

class AuditLog {
    + id: string (UUID)
    + actor_id: integer
    + action: string
    + entity_type: string
    + entity_id: string
    + old_values: array
    + new_values: array
    + previous_hash: string
    + current_hash: string
    + ip_address: string
    + metadata: array
    + resultat: string
    + importance: string
    + ressource: string
    + created_at: datetime
    --
    + actor(): BelongsTo
}

class AuthCode {
    + id: string (UUID)
    + user_id: integer
    + code_hash: string
    + expires_at: datetime
    + email: string
    + attempts: integer
    + used_at: datetime
    + ip_address: string
    --
    + user(): BelongsTo
    + isExpired(): boolean
    + isUsed(): boolean
}

class BlockedIp {
    + id: integer
    + ip_address: string
    + reason: string
    + attack_id: integer
    + blocked_until: datetime
    --
    + attack(): BelongsTo
}

class HoneypotTrap {
    + id: integer
    + name: string
    + type: string
    + fake_service: string
    + port: integer
    + path: string
    + status: string
    + description: text
    + lure_content: text
    + interactions_count: integer
    + last_triggered_at: datetime
    + config: array
    --
    + interactions(): HasMany
}

class HoneypotInteraction {
    + id: integer
    + honeypot_trap_id: integer
    + source_ip: string
    + country: string
    + city: string
    + latitude: float
    + longitude: float
    + isp: string
    + method: string
    + path: string
    + user_agent: string
    + payload: text
    + credentials_attempted: array
    + session_duration: integer
    + actions_taken: array
    + risk_score: integer
    --
    + trap(): BelongsTo
}

class Simulation {
    + id: integer
    + name: string
    + attack_type: string
    + target_ip: string
    + duration_seconds: integer
    + intensity: string
    + status: string
    + packets_sent: integer
    + log: text
    + started_at: datetime
    + completed_at: datetime
}

' Classes Intranet intégrées directement
class Student {
    + id: string
    + student_id: string
    + first_name: string
    + last_name: string
    + email: string
    + phone: string
    + date_of_birth: date
    + address: text
    + status: string
    --
    + enrollments(): HasMany
    + messages(): HasMany
}

class Course {
    + id: string
    + course_code: string
    + title: string
    + description: text
    + department: string
    + credits: integer
    + semester: string
    + max_students: integer
    + status: string
    --
    + enrollments(): HasMany
}

class Enrollment {
    + id: string
    + student_id: string
    + course_id: string
    + semester: string
    + enrollment_date: datetime
    + grade: string
    + final_score: decimal
    + status: string
    --
    + student(): BelongsTo
    + course(): BelongsTo
}

class Message {
    + id: string
    + sender_id: string
    + recipient_id: string
    + subject: string
    + body: text
    + is_read: boolean
    --
    + sender(): BelongsTo
    + recipient(): BelongsTo
}

' Relations entre toutes les classes

' Généralisations de User
User <|-- AdminUser
User <|-- IntranetUser
User <|-- AttackerUser

' Relations User et spécialisations
User ||--o{ SecuritySession : "1..*"
User ||--o{ UserRole : "1..*"
User ||--o{ AttackComment : "1..*"
User ||--o{ AuditLog : "1..* (actor)"
User ||--o{ AuthCode : "1..*"
AdminUser --> DetectionRule : "configure"
IntranetUser --> Student : "représente"
AttackerUser --> Attack : "lance"

' Relations UserRole et Permissions
UserRole }o--|| User : "1"
UserRole }o--o{ Permission : "*..*" (via RolePermission)
RolePermission }o--|| Permission : "1"
Permission ||--o{ RolePermission : "1..*"

' Relations Attack
Attack ||--o{ Alert : "1..*"
Attack ||--o{ AttackComment : "1..*"
Attack }o--|| DetectionRule : "1"
Attack ||--o{ BlockedIp : "0..*"
Attack --> Simulation : "peut être simulé"

' Relations Alert
Alert }o--|| Attack : "1"

' Relations DetectionRule
DetectionRule ||--o{ Attack : "1..*"
DetectionRule --> AdminUser : "configuré par"

' Relations AttackComment
AttackComment }o--|| Attack : "1"
AttackComment }o--|| User : "1"

' Relations AuditLog
AuditLog }o--o| User : "0..1 (actor)"

' Relations AuthCode
AuthCode }o--|| User : "1"

' Relations BlockedIp
BlockedIp }o--o| Attack : "0..1"

' Relations Honeypot
HoneypotTrap ||--o{ HoneypotInteraction : "1..*"
HoneypotInteraction }o--|| HoneypotTrap : "1"
HoneypotInteraction --> Attack : "peut générer"

' Relations Intranet
Student ||--o{ Enrollment : "1..*"
Student ||--o{ Message : "1..* (sender)"
Course ||--o{ Enrollment : "1..*"
Enrollment }o--|| Student : "1"
Enrollment }o--|| Course : "1"
Message }o--|| Student : "1 (sender)"
Message }o--|| Student : "1 (recipient)"
IntranetUser --> Student : "accède"
IntranetUser --> Course : "s'inscrit"
IntranetUser --> Message : "envoie/reçoit"

' Relations transversales
User --> Attack : "détecte/comment"
User --> Alert : "gère"
User --> HoneypotTrap : "configure"
User --> Simulation : "lance"
AuditLog --> Attack : "log des actions"
AuditLog --> User : "log des utilisateurs"
BlockedIp --> User : "affecte"

' Notes explicatives
note right of User : Classe de base pour tous les utilisateurs\nAdmin, Intranet, Attaquant
note right of AdminUser : Administrateur système\nGère la sécurité et les règles
note right of IntranetUser : Utilisateur du mini-site\nAccède aux cours et messages
note right of AttackerUser : Représentation conceptuelle\nd'un utilisateur malveillant
note right of Attack : Attaque détectée\nLiée à des règles et alertes
note right of Student : Étudiant dans l'intranet\nLié aux cours et messages

@enduml

' Relations UserRole et Permissions
UserRole }o--|| User : "1"
UserRole }o--o{ Permission : "*..*" (via RolePermission)
RolePermission }o--|| Permission : "1"
Permission ||--o{ RolePermission : "1..*"

' Relations Attack
Attack ||--o{ Alert : "1..*"
Attack ||--o{ AttackComment : "1..*"
Attack }o--|| DetectionRule : "1"
Attack ||--o{ BlockedIp : "0..*"

' Relations Alert
Alert }o--|| Attack : "1"

' Relations DetectionRule
DetectionRule ||--o{ Attack : "1..*"

' Relations AttackComment
AttackComment }o--|| Attack : "1"
AttackComment }o--|| User : "1"

' Relations AuditLog
AuditLog }o--o| User : "0..1 (actor)"

' Relations AuthCode
AuthCode }o--|| User : "1"

' Relations BlockedIp
BlockedIp }o--o| Attack : "0..1"

' Relations Honeypot
HoneypotTrap ||--o{ HoneypotInteraction : "1..*"
HoneypotInteraction }o--|| HoneypotTrap : "1"

' Relations Intranet
Student ||--o{ Enrollment : "1..*"
Student ||--o{ Message : "1..* (sender)"
Course ||--o{ Enrollment : "1..*"
Enrollment }o--|| Student : "1"
Enrollment }o--|| Course : "1"
Message }o--|| Student : "1 (sender)"
Message }o--|| Student : "1 (recipient)"

' Notes explicatives
note right of User : Utilisateur principal du système\navec authentification et rôles
note right of Attack : Représente une attaque détectée\navec géolocalisation et métriques
note right of HoneypotTrap : Piège honeypot pour attirer\nles attaquants et collecter des données
note right of Student : Étudiant du système intranet\navec inscriptions aux cours
note right of Enrollment : Inscription d'un étudiant\nà un cours spécifique

@enduml